création du html avec images

--- a/index.html
+++ b/index.html
@@ -4,8 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css">
-    <title></title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+      body { background-image: url('https://steamuserimages-a.akamaihd.net/ugc/1870678152111669998/2F0D3E8F8862E87725F3E5923D6463F1A7F5F8B6/?imw=512&&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false'); } 
+    </style>
+    <title>YOKO KANNO </title>
+    <link rel="icon" type="image/x-icon" href="img/ED.png">
   </head>
-
-  <body></body>
+  <body> 
+    <header>
+      <nav>
+        <a href="#Biographie">Biographie</a>
+        <a href="#Synopsis">Synopsis</a>
+        <a href="#Spotify">Spotify</a>
+      </nav>
+      <h1>Yoko Kanno</h1>
+      <img src="img/yokokanno1.jpg" alt="yoko kanno beautiful">
+      <h2>Cowboy bebop </h2>
+      <h3>Hajime Yatate 1998 </h3>
+      <img src="img/everyone1.png" alt="SPIKE JET FAYE ED AND DOGGO">
+      <img src="img/spike1.jpg" alt="segsi spike">
+    </header>
+    <main>
+      <div>
+        <h2 id="Synopsis" > Synopsis </h2>
+        <p>Une histoire de 26 épisodes sur des chasseurs de primes ruinés qui voyagent à 
+        bord de leur navette appelée Bebop poursuivant des criminels.
+        Les personnages principaux sont Spike, un beau jeun homme agile et futé, Jet,
+        le capitaine de la navette, Faye Valentine, ex criminelle qui les rejoint plus 
+        tard et Ed un jeune hacheur très bizarre et énergétique.</p>
+      </div>
+      <div>
+        <h2 id="Biographie"> Yoko Kanno </h2>
+        <p>Est une compositrice, productrice et scénariste japonaise née en 1986.
+        Elle dirige aussi un groupe appellé seatbelts, de blues &
+        jazz. appellé Seatbelts, de blues et de jazz</p>
+        <img src="img/yokokanno2.JPG" alt="yoko kanno nytimes">
+      </div>
+      <div>
+        <h2 id="Spotify">Rush - Seatbelts</h2>
+        <img src="img/seatbeltsalbum.jpeg" alt=seatbelts album">
+        <img src="img/spotify.png" alt=" spotify code rush song" >
+        <p> <em>COWBOY BEBOP soundtrack SEATBELTS- 1998</em></p>
+      </div>
+    </main>
+    <footer>
+    </footer>
+  </body>
 </html>
