commencement du css (moitié)

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <a href="#Synopsis">Synopsis</a>
         <a href="#Spotify">Spotify</a>
       </nav>
-      <h1>Yoko Kanno</h1>
-      <img src="img/yokokanno1.jpg" alt="yoko kanno beautiful">
-      <h2>Cowboy bebop </h2>
+      <h1>YOKO KANNO</h1>
+      <img src="img/yokokanno1.jpg" alt="yoko kanno beautiful" class="images" >
+      <h1>COWBOY BEBOP</h1>
       <h3>Hajime Yatate 1998 </h3>
       <img src="img/everyone1.png" alt="SPIKE JET FAYE ED AND DOGGO">
       <img src="img/spike1.jpg" alt="segsi spike">
