--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gloock&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
       body { background-image: url('https://steamuserimages-a.akamaihd.net/ugc/1870678152111669998/2F0D3E8F8862E87725F3E5923D6463F1A7F5F8B6/?imw=512&&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false'); } 
     </style>
@@ -19,6 +19,7 @@
         <a href="#Biographie">Biographie</a>
         <a href="#Synopsis">Synopsis</a>
         <a href="#Spotify">Spotify</a>
+        <a href="google.com" > ES</a>
       </nav>
       <h1>YOKO KANNO</h1>
       <img src="img/yokokanno1.jpg" alt="yoko kanno beautiful" class="images" >
@@ -49,8 +50,17 @@
         <img src="img/spotify.png" alt=" spotify code rush song" >
         <p> <em>COWBOY BEBOP soundtrack SEATBELTS- 1998</em></p>
       </div>
+      <iframe width="300" height="315" src="https://www.youtube.com/embed/zaI8vjriSVE"
+      title="Rush- Seatbelts" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+      </iframe>
+ 
     </main>
     <footer>
+      <img src="img/session.webp" alt="session1" class="image" >
+      <a href="https://www.youtube.com/@YokoKannoCH" class="footer">Youtube de Yoko Kanno </a> 
+      <a href="https://www.netflix.com/title/80001305">Regarder</a>
+      <a href="google.com" >autres compositeurs</a>
+      <a href="mailto:mariadelmar.machadogonzalvez@studentfr.ch">contact</a>
     </footer>
   </body>
 </html>
