changements dans html

--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gloock&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
-      body { background-image: url('https://steamuserimages-a.akamaihd.net/ugc/1870678152111669998/2F0D3E8F8862E87725F3E5923D6463F1A7F5F8B6/?imw=512&&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false'); } 
+      body { background-image: url('https://cdn.wallpapersafari.com/58/64/rXkh5y.jpg'); } 
     </style>
     <title>YOKO KANNO </title>
     <link rel="icon" type="image/x-icon" href="img/ED.png">
   </head>
-  <body> 
+  <body>
+   bgcolor="#FFFFFF" leftmargin="0" topmargin="500" marginwidth="200" marginheight="500">
+  <img src="img/bebop-removebg-preview.png"  "160" height="100" alt="shape1">
+  
     <header>
       <nav>
         <a href="#Biographie">Biographie</a>
@@ -22,6 +25,7 @@
         <a href="google.com" > ES</a>
       </nav>
       <h1>YOKO KANNO</h1>
+      <h1>菅野よう子</h1>
       <img src="img/yokokanno1.jpg" alt="yoko kanno beautiful" class="images" >
       <h1>COWBOY BEBOP</h1>
       <h3>Hajime Yatate 1998 </h3>
@@ -30,37 +34,68 @@
     </header>
     <main>
       <div>
-        <h2 id="Synopsis" > Synopsis </h2>
-        <p>Une histoire de 26 épisodes sur des chasseurs de primes ruinés qui voyagent à 
-        bord de leur navette appelée Bebop poursuivant des criminels.
-        Les personnages principaux sont Spike, un beau jeun homme agile et futé, Jet,
-        le capitaine de la navette, Faye Valentine, ex criminelle qui les rejoint plus 
-        tard et Ed un jeune hacheur très bizarre et énergétique.</p>
+        <h2 id="Synopsis" > SYNOPSIS </h2>
+        <p>
+          Une histoire de 26 épisodes sur des chasseurs de primes ruinés qui voyagent à 
+          bord de leur navette appelée Bebop poursuivant des criminels.
+          Les personnages principaux sont Spike, un beau jeun homme agile et futé, Jet,
+          le capitaine de la navette, Faye Valentine, ex criminelle qui les rejoint plus 
+          tard et Ed un jeune hacheur très bizarre et énergétique.
+        </p>
       </div>
+
       <div>
-        <h2 id="Biographie"> Yoko Kanno </h2>
-        <p>Est une compositrice, productrice et scénariste japonaise née en 1986.
-        Elle dirige aussi un groupe appellé seatbelts, de blues &
-        jazz. appellé Seatbelts, de blues et de jazz</p>
+        <h2 id="Biographie"> YOKO KANNO </h2>
+        <p>
+          Est une compositrice, productrice et scénariste japonaise née en 1986.
+          Elle dirige aussi un groupe appellé seatbelts, de blues &
+          jazz. appellé Seatbelts, de blues et de jazz
+        </p>
         <img src="img/yokokanno2.JPG" alt="yoko kanno nytimes">
       </div>
+
       <div>
-        <h2 id="Spotify">Rush - Seatbelts</h2>
-        <img src="img/seatbeltsalbum.jpeg" alt=seatbelts album">
+        <h2 id="Spotify">RUSH-SEATBELTS  </h2>
+        <img src="img/seatbeltsalbum.jpeg" alt=seatbeltsalbum">
         <img src="img/spotify.png" alt=" spotify code rush song" >
-        <p> <em>COWBOY BEBOP soundtrack SEATBELTS- 1998</em></p>
+        <p>
+          <em>COWBOY BEBOP soundtrack SEATBELTS- 1998</em>
+        </p>
       </div>
-      <iframe width="300" height="315" src="https://www.youtube.com/embed/zaI8vjriSVE"
-      title="Rush- Seatbelts" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-      </iframe>
- 
+
+      <div class="end">
+        <iframe width="300" height="315" src="https://www.youtube.com/embed/zaI8vjriSVE"
+        title="Rush- Seatbelts" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+        </iframe>
+        <p> 
+          <em> Yoko Kanno dirige son groupe seatbelts en live</em>
+        </p>
+      </div>
+
+      <img src="img/seeyouspacecowboy.png" alt="endofcowboybebop" > 
     </main>
+    <nav>
+      <h2>Plus de cowboy Bebop</h2>
+      <div class="button">
+      <div class="button-ytb">
+        <a href="https://www.youtube.com/@YokoKannoCH" >Youtube de Yoko Kanno</a>
+      </div>
+      <div class="button-watch">
+        <a href="https://www.netflix.com/title/80001305">Regarder</a>
+      </div>
+      <div class="button-other">
+        <a href="google.com" >autres compositeurs</a>
+      </div>
+    </nav>
     <footer>
-      <img src="img/session.webp" alt="session1" class="image" >
-      <a href="https://www.youtube.com/@YokoKannoCH" class="footer">Youtube de Yoko Kanno </a> 
-      <a href="https://www.netflix.com/title/80001305">Regarder</a>
-      <a href="google.com" >autres compositeurs</a>
-      <a href="mailto:mariadelmar.machadogonzalvez@studentfr.ch">contact</a>
+      <h3>contact</h3>
+      <p>
+        imd1
+        <br>
+        compositeurs
+        <br>
+        Eikon 2023
+      </p>
     </footer>
   </body>
 </html>
