changement de font & ajout d'une vidéo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gloock&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gloock&family=Imbue:wght@100;200;300;400;500;600;700;800;900&family=Space+Grotesk:wght@300&display=swap" rel="stylesheet">
     <style>
       body { background-image: url('https://cdn.wallpapersafari.com/58/64/rXkh5y.jpg'); } 
     </style>
@@ -28,7 +30,8 @@
       <h1>菅野よう子</h1>
       <img src="img/yokokanno1.jpg" alt="yoko kanno beautiful" class="images" >
       <h1>COWBOY BEBOP</h1>
-      <h3>Hajime Yatate 1998 </h3>
+      <h1>Hajime Yatate 1998 </h1>
+      <h1>矢立肇</h1>
       <img src="img/everyone1.png" alt="SPIKE JET FAYE ED AND DOGGO">
       <img src="img/spike1.jpg" alt="segsi spike">
     </header>
