ajout d'un paragraphe et retrait de borders dans css

--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
     <link rel="icon" type="image/x-icon" href="img/ED.png">
   </head>
   <body>
-   bgcolor="#FFFFFF" leftmargin="0" topmargin="500" marginwidth="200" marginheight="500">
-  <img src="img/bebop-removebg-preview.png"  "160" height="100" alt="shape1">
-  
     <header>
       <nav>
         <a href="#Biographie">Biographie</a>
@@ -41,9 +38,21 @@
         <p>
           Une histoire de 26 épisodes sur des chasseurs de primes ruinés qui voyagent à 
           bord de leur navette appelée Bebop poursuivant des criminels.
-          Les personnages principaux sont Spike, un beau jeun homme agile et futé, Jet,
-          le capitaine de la navette, Faye Valentine, ex criminelle qui les rejoint plus 
-          tard et Ed un jeune hacheur très bizarre et énergétique.
+          <img src="img/capturedecranintrocbebop.jpg" alt="capture d'écran de l'introduction
+          d'un épisode"> <br>
+        </p>
+        <p>
+          Les personnages principaux sont <em>Spike</em>, un beau jeun homme agile
+          et futé,<em> Jet</em>, le capitaine de la navette,<em>Faye Valentine</em>,
+          ex criminelle qui les rejoint plus tard et <em>Ed</em> un jeune hackeur très
+          bizarre et énergétique.<br>
+          <img src="img/allofem.jpg" alt="Jet, Spike, Faye et ed"> <br>
+          <em> De gauche à droite, Jet Spike Faye et Ed</em>
+        </p>
+        <p>
+          Toute l'histoire est accompagnée par des musiques nostalgiques et dynamiques,
+          pleines d'émotions composées pae Yoko Kanno, principalement du Bebop ou du
+          Jazz, qui nous font sentir comme un vrai cowboy de l'espace.
         </p>
       </div>
 
@@ -55,6 +64,9 @@
           jazz. appellé Seatbelts, de blues et de jazz
         </p>
         <img src="img/yokokanno2.JPG" alt="yoko kanno nytimes">
+        <p>
+          <em> <span class="subtitle">Yoko Kanno pour le magazine 'New York Times'</span></em>
+        </p>
       </div>
 
       <div>
@@ -66,7 +78,7 @@
         </p>
       </div>
 
-      <div class="end">
+      <div>
         <iframe width="300" height="315" src="https://www.youtube.com/embed/zaI8vjriSVE"
         title="Rush- Seatbelts" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
         </iframe>
@@ -74,31 +86,16 @@
           <em> Yoko Kanno dirige son groupe seatbelts en live</em>
         </p>
       </div>
-
       <img src="img/seeyouspacecowboy.png" alt="endofcowboybebop" > 
     </main>
-    <nav>
-      <h2>Plus de cowboy Bebop</h2>
-      <div class="button">
-      <div class="button-ytb">
-        <a href="https://www.youtube.com/@YokoKannoCH" >Youtube de Yoko Kanno</a>
-      </div>
-      <div class="button-watch">
-        <a href="https://www.netflix.com/title/80001305">Regarder</a>
-      </div>
-      <div class="button-other">
-        <a href="google.com" >autres compositeurs</a>
-      </div>
-    </nav>
     <footer>
-      <h3>contact</h3>
-      <p>
-        imd1
-        <br>
-        compositeurs
-        <br>
-        Eikon 2023
-      </p>
+      <div>
+        <p>
+          <a href="mailto:eikon@edufr.ch">contact</a><br>
+          <a href="https://imd1.at-eikon.ch/">autres sites</a><br>
+          eikon 20223 imd12
+        </p>
+      </div>
     </footer>
   </body>
 </html>
