--- a/index.html
+++ b/index.html
@@ -23,32 +23,44 @@
         <a href="#Spotify">Spotify</a>
         <a href="google.com" > ES</a>
       </nav>
-      <h1>YOKO KANNO</h1>
-      <h1>菅野よう子</h1>
-      <img src="img/yokokanno1.jpg" alt="yoko kanno beautiful" class="images" >
-      <h1>COWBOY BEBOP</h1>
-      <h1>Hajime Yatate 1998 </h1>
-      <h1>矢立肇</h1>
-      <img src="img/everyone1.png" alt="SPIKE JET FAYE ED AND DOGGO">
-      <img src="img/spike1.jpg" alt="segsi spike">
+      <div class="yoko-title">
+        <h1>YOKO KANNO </h1>
+        <h1>菅野よう子</h1>
+        <img src="img/yokokanno1.jpg" alt="yoko kanno beautiful" class="images" >
+      </div>
+      <div class="show-title">
+        <h1>COWBOY BEBOP</h1>
+        <h1>Hajime Yatate 1998 </h1>
+        <h1>矢立肇</h1>
+        <img src="img/everyone1.png" alt="SPIKE JET FAYE ED AND DOGGO">
+        <img src="img/spike1.jpg" alt="segsi spike">
+      </div>
+      
     </header>
     <main>
-      <div>
+      <div class="paragraphe-1">
         <h2 id="Synopsis" > SYNOPSIS </h2>
         <p>
           Une histoire de 26 épisodes sur des chasseurs de primes ruinés qui voyagent à 
           bord de leur navette appelée Bebop poursuivant des criminels.
-          <img src="img/capturedecranintrocbebop.jpg" alt="capture d'écran de l'introduction
-          d'un épisode"> <br>
         </p>
+      </div>
+      <p>
+        <img src="img/capturedecranintrocbebop.jpg" alt="capture d'écran de l'introduction
+        d'un épisode"> <br>
+      </p>
+      <div class="paragraphe-2">
         <p>
           Les personnages principaux sont <em>Spike</em>, un beau jeun homme agile
           et futé,<em> Jet</em>, le capitaine de la navette,<em>Faye Valentine</em>,
           ex criminelle qui les rejoint plus tard et <em>Ed</em> un jeune hackeur très
           bizarre et énergétique.<br>
+        </div>
+        <p>
           <img src="img/allofem.jpg" alt="Jet, Spike, Faye et ed"> <br>
           <em> De gauche à droite, Jet Spike Faye et Ed</em>
         </p>
+      <div class="paragraphe-3" >
         <p>
           Toute l'histoire est accompagnée par des musiques nostalgiques et dynamiques,
           pleines d'émotions composées pae Yoko Kanno, principalement du Bebop ou du
@@ -56,7 +68,7 @@
         </p>
       </div>
 
-      <div>
+      <div class="musician">
         <h2 id="Biographie"> YOKO KANNO </h2>
         <p>
           Est une compositrice, productrice et scénariste japonaise née en 1986.
@@ -89,7 +101,7 @@
       <img src="img/seeyouspacecowboy.png" alt="endofcowboybebop" > 
     </main>
     <footer>
-      <div>
+      <div class="footer"
         <p>
           <a href="mailto:eikon@edufr.ch">contact</a><br>
           <a href="https://imd1.at-eikon.ch/">autres sites</a><br>
