changements des textes en japonais

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
       </nav>
       <div class="yoko-title">
         <h1>YOKO KANNO </h1>
-        <h1>菅野よう子</h1>
+        <h2> <span class="japanese"> 菅野よう子</span> </h2>
         <img src="img/yokokanno1.jpg" alt="yoko kanno beautiful" class="images" >
       </div>
       <div class="show-title">
         <h1>COWBOY BEBOP</h1>
-        <h1>Hajime Yatate 1998 </h1>
-        <h1>矢立肇</h1>
+        <h3> Hajime Yatate</h3>
+        <h3> <span class="japanese" >矢立肇</span></h3>
         <img src="img/everyone1.png" alt="SPIKE JET FAYE ED AND DOGGO">
         <img src="img/spike1.jpg" alt="segsi spike">
       </div>
@@ -101,7 +101,7 @@
       <img src="img/seeyouspacecowboy.png" alt="endofcowboybebop" > 
     </main>
     <footer>
-      <div class="footer"
+      <div>
         <p>
           <a href="mailto:eikon@edufr.ch">contact</a><br>
           <a href="https://imd1.at-eikon.ch/">autres sites</a><br>
